tests/FSharp.Analyzers.Tests/data/disposedBeforeAsyncRun/negative/NoUseBeforeAsync.fs
module M

let foo () =
    async {
        return "hi"
    }
